[metadata]
# replace with your username:
name = quantum-fog
version = 0.0.1
author = Henning Dekant
author_email = 
description = Quantum Fog (QFog) is an app for modelling physical situations that exhibit quantum mechanical behavior.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artiste-qb-net/quantum-fog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: PBNT_License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6